--- a/bookshelf.html
+++ b/bookshelf.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+  <script src="https://kit.fontawesome.com/2e51826daa.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header id="header">
@@ -57,7 +58,7 @@
       <p>Tahun :</p>
       <div class="action">
         <button class="greenDone">Selesai dibaca</button>
-        <button class="redTrash">Hapus Buku</button>
+        <button class="redTrash"><i class="fa-solid fa-trash-can"></i></button>
         <button class="blueEdit">Edit Buku</button>
       </div>
     </article> -->
@@ -73,7 +74,7 @@
       <p>Tahun :</p>
       <div class="action">
         <button class="undoGreen">Belum selesai dibaca</button>
-        <button class="redTrash">Hapus Buku</button>
+        <button class="redTrash"><i class="fa-solid fa-trash-can"></i></button>
       </div>
     </article> -->
   </div>
