memodifikasi script, merubah jalur file di html

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -6,10 +6,10 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bookshelf Apps</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap">
   <script src="https://kit.fontawesome.com/2e51826daa.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -87,7 +87,7 @@
   </section>
 </main>
 
-<script src="main.js"></script>
+<script src="/js/main.js"></script>
 
 </body>
 </html>
