merubah search button dan display button yang lain

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -19,7 +19,7 @@
       <ul>
         <form id="searchBook">
         <li> <input id="searchBookTitle" type="search" placeholder="Masukan Judul Buku"></li>
-        <li><button id="searchSubmit" type="submit">Cari</button></li>
+        <li><button id="searchSubmit" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button></li>
       </form>
       </ul>
     </nav>
