menambah link contact

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -81,7 +81,10 @@
   </section>
   <section>
     <footer id="footer">
-      <ul><li><a href="https://www.linkedin.com/in/misnosugianto48/">Linkedin</a></li></ul>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/misnosugianto48/"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="https://github.com/misnosugianto48"><i class="fa-brands fa-github"></i></a></li>
+      </ul>
       <h4>Copyright 2022, Dicoding Bookshelf Apps.</h4>
     </footer>
   </section>
