merubah ukuran contact di footer

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -82,8 +82,8 @@
   <section>
     <footer id="footer">
       <ul>
-        <li><a href="https://www.linkedin.com/in/misnosugianto48/"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href="https://github.com/misnosugianto48"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/misnosugianto48/"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
+        <li><a href="https://github.com/misnosugianto48"><i class="fa-brands fa-github fa-xl"></i></a></li>
       </ul>
       <h4>Copyright 2022, Dicoding Bookshelf Apps.</h4>
     </footer>
