komentar pada article

--- a/BookShelff.html
+++ b/BookShelff.html
@@ -56,7 +56,7 @@
       <!-- unread -->
       <h2>Belum selesai dibaca</h2>
       <div id="incompleteBookshelfList" class="book_list">
-      <article class="book_item" >
+      <!-- <article class="book_item" >
         <h3>Book Title</h3>
         <p>Penulis :</p>
         <p>Tahun :</p>
@@ -65,7 +65,7 @@
             <button class="redTrash"><i class="fa-solid fa-trash-can"></i></button>
           <button class="blueEdit">Edit Buku</button>
         </div>
-      </article>
+      </article> -->
     </div>
     </section>
 
@@ -73,7 +73,7 @@
     <!-- list item done -->
     <h2>Selesai dibaca</h2>
     <div id="completeBookshelfList" class="book_list">
-    <article class="book_item" >
+    <!-- <article class="book_item" >
       <h3>Book Title</h3>
       <p>Penulis :</p>
       <p>Tahun :</p>
@@ -81,7 +81,7 @@
         <button class="undoGreen">Belum selesai dibaca</button>
         <button class="redTrash"><i class="fa-solid fa-trash-can"></i></button>
       </div>
-    </article>
+    </article> -->
   </div>
     </section>
   </main>
