menambah script dan resposive booklist

--- a/BookShelff.html
+++ b/BookShelff.html
@@ -93,5 +93,7 @@
     </ul>
     <h4>Copyright 2022, Dicoding Bookshelf Apps.</h4>
   </footer>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
